# ExcelMind

./: README.md  SUP00014 IT INFRA.xlsx  package-lock.json  pyproject.toml
src/excel_agent/: api.py  excel_loader.py  graph.py  knowledge_base.py  language.py  prompts.py  stream.py  tools.py
src/excel_agent/frontend/: index.html
